# sum-v4

./: .gitignore  .windsurfrules  Cargo.toml  README.md  app_config.json  build.rs  build_with_icon.py  calculation.py  config.py  create_icon.py  create_windows_icon.py  file_operations.py  gui_components.py  main.py  memory_test.py  package_with_icon.py  performance_test.py  requirements.txt  subset_sum_wrapper.py  test_large.txt  test_medium.txt  test_simd.py  test_small.txt  version_info.txt
src/: lib.rs
