[package]
name = "subset_sum"
version = "1.5.5"
edition = "2021"

[lib]
name = "subset_sum"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
rayon = "1.7.0"
num_cpus = "1.15.0"
chrono = "0.4.31"

[build-dependencies]
chrono = "0.4.31"

[profile.release]
opt-level = 'z'     # 优化大小
lto = true          # 链接时优化
codegen-units = 1   # 单元编译，增加编译时间但减小大小
strip = true        # 去除调试信息
panic = 'abort'     # 简化错误处理代码
